--- a/wp-content/themes/bizotik/css/style.css
+++ b/wp-content/themes/bizotik/css/style.css
@@ -386,7 +386,7 @@ P {
 .info p a {
 	color: #666;
 }
-.form-group input[type="text"], .form-group textarea {
+.form-group input[type="text"], .form-group input[type="email"], .form-group textarea {
 	display: block;
 	width: 100%;
 	height: auto;
@@ -404,7 +404,7 @@ P {
 .form-group textarea {
 	height: 178px;
 }
-.submit-area button {
+.submit-area input[type="submit"] {
 	border: 1px solid #53aee3;
 	color: #fff;
 	font-size: 14px;
@@ -925,4 +925,41 @@ to {
 	text-transform: uppercase;
 	font-family: 'Roboto Slab', serif;
 	text-align:center;
+}
+.screen-reader-response
+{
+	display: none;
+}
+
+ /** News **/
+.newsdiv {
+margin-bottom: 10px;
+padding-bottom: 10px;
+border-bottom: 1px #CCC solid;
+}
+.date_card {
+position: relative;
+float: left;
+width: 50px;
+padding-right: 10px;
+margin-right: 10px;
+border-right: 1px #888 dotted;
+text-align:center;
+font-size: 15px;
+}
+.post_title {
+float: left;
+width: 850px;
+}
+
+.news_title {
+ font-size:15px;
+ line-height:22px;
+ color:#2397db;
+ margin-bottom:10px;
+}
+.news_post p {
+ font-size:13px;
+ line-height:20px;
+ color:#555;
 }
